# raycaster-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Game.h  LICENSE  Makefile  MathLib.h  README.md  RayCaster.cpp  RayCaster.h  Raycaster.data  Raycaster.js  Raycaster.wasm  Screen.cpp  Screen.h  index.html  install.sh
.github/workflows/: main.yml
CMake/modules/: FindSDL2.cmake
CMake/toolchain/: i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
cmake/modules/: appimage.cmake
src/: CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  IRenderer.h  Main.cpp  Map.cpp  Map.h  MathLib.h  Matrix2.h  Matrix2.inl  RayCaster.cpp  RayCaster.h  SDLDeleter.h  SDLRenderer.cpp  SDLRenderer.h  SDL_Deleter.h  Texture.h  Vector2.h  Vector2.inl  WallTypes.h  main.cpp  shell_minimal.html
